styles/components/_page.scss
.page {
  position:relative;
  display:flex;

  .sidebar { flex:0 0 20%; }

  &-edit {
    position:absolute;
    top:1em; 
    right:1em;
    font-size:getFontSize(-1);
    text-transform:uppercase;
    color:map-get($colors, lynch);

    &:hover { color:map-get($colors, chatham); }
  }

  &-content { 
    flex:0 0 80%; 
    padding:1em;
    background:map-get($colors, white);
  }
}

